After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758692 - unknown file type shown for cd iso image
unknown file type shown for cd iso image
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Views: List View
3.18.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-26 09:40 UTC by Asif Ali Rizvan
Modified: 2017-11-03 22:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
iso image type incorrectly shown as unknown (129.35 KB, image/png)
2015-11-26 09:40 UTC, Asif Ali Rizvan
  Details
file: Don't call a file type "Unknown" if it isn't (1.06 KB, patch)
2017-08-24 10:31 UTC, António Fernandes
committed Details | Review

Description Asif Ali Rizvan 2015-11-26 09:40:21 UTC
Created attachment 316290 [details]
iso image type incorrectly shown as unknown

Please see the attachment, the first file android-x86-4.4-RC2.iso is shown as "unknown" file type, whereas, mimetype shows application/x-cd-image.

expected behavior: should show CD/DVD image.
Comment 1 António Fernandes 2017-08-24 10:31:07 UTC
Created attachment 358314 [details] [review]
file: Don't call a file type "Unknown" if it isn't

If file type is known but doesn't match any basic type, then it's not unknown.

To fix, call it "Other".

Note that nautilus_file_get_string_attribute_with_default uses "Unknown" as
the default pretty value for NULL.
Comment 2 António Fernandes 2017-08-24 10:32:52 UTC
We are in string freeze already, but I'm leaving this patch here for later.
Comment 3 Ernestas Kulik 2017-08-24 16:44:39 UTC
Review of attachment 358314 [details] [review]:

Makes sense to me.
Comment 4 António Fernandes 2017-11-02 15:21:45 UTC
Attachment 358314 [details] pushed as e815318 - file: Don't call a file type "Unknown" if it isn't