file: Don't call a file type "Unknown" if it isn't

If file type is known but doesn't match any basic type, then it's not unknown.

To fix, call it "Other".

Note that nautilus_file_get_string_attribute_with_default uses "Unknown" as
the default pretty value for NULL.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=758692